# ccagents

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  build.rs
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: GITHUB_SETUP.md
src/: agent.rs  config.rs  downloader.rs  lib.rs  linker.rs  main.rs  test_helpers.rs  version.rs
src/commands/: add.rs  clean.rs  disable.rs  doctor.rs  enable.rs  import.rs  list.rs  mod.rs  sync.rs
tests/: integration_tests.rs
